RESOLVED FIXED 85405
CSS 2.1 failure: table-height-algorithm-023 and -024 fail
https://bugs.webkit.org/show_bug.cgi?id=85405
Summary CSS 2.1 failure: table-height-algorithm-023 and -024 fail
Robert Hogan
Reported 2012-05-02 12:43:42 PDT
Treat vertical-align: [length] as baseline
Attachments
Patch (114.80 KB, patch)
2012-05-09 12:53 PDT, Robert Hogan
eric: review+
Robert Hogan
Comment 1 2012-05-09 12:53:30 PDT
Eric Seidel (no email)
Comment 2 2012-05-09 13:16:07 PDT
Comment on attachment 141001 [details] Patch LGTM.
Eric Seidel (no email)
Comment 3 2012-05-09 13:16:50 PDT
Comment on attachment 141001 [details] Patch I suspect you might make people happier if you landed the baselines next ot the tests (instead o in the platofrm/chromium directory) and then things like webkit-pach optimize-baselines will eventually move them to the right place as needed. :)
Robert Hogan
Comment 4 2012-05-09 13:24:17 PDT
(In reply to comment #3) > (From update of attachment 141001 [details]) > I suspect you might make people happier if you landed the baselines next ot the tests (instead o in the platofrm/chromium directory) and then things like webkit-pach optimize-baselines will eventually move them to the right place as needed. :) OK, wow - another cool feature of webkit-patch I didn't know about.
Robert Hogan
Comment 5 2012-05-17 12:08:52 PDT
Note You need to log in before you can comment on or make changes to this bug.